# rust-recall

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  publish.yml
ci/: go.mod  go.sum  main.go  start-localnet.sh
cli/: .env  .env.example  Cargo.toml  README.md  env.example
cli/src/: account.rs  blob.rs  chain.rs  credit.rs  machine.rs  main.rs  storage.rs  subnet.rs  validator.rs
cli/src/machine/: accumulator.rs  bucket.rs  objectstore.rs  sqlite.rs  timehub.rs
dagger/: README.md  dagger.json
dagger/ci/: main.go
dagger/ci/cli-tests/: 00-account-deposit.sh
faucet/: Cargo.toml
faucet/src/: main.rs  server.rs
faucet/src/server/: register.rs  send.rs  shared.rs  util.rs
provider/: Cargo.toml
provider/src/: json_rpc.rs  lib.rs  message.rs  object.rs  provider.rs  query.rs  response.rs  tx.rs  util.rs
scripts/: check-localnet-container.sh  run-cli-tests.sh
sdk/: Cargo.toml  README.md
sdk/examples/: README.md  account_balance.rs  account_create.rs  account_deposit.rs  accumulator_push.rs  adm_sdk.rs  bucket_add.rs  bucket_add_many.rs  credits.rs  objectstore_add.rs  timehub_push.rs
sdk/src/: account.rs  blobs.rs  chain.rs  credits.rs  encryption.rs  helpers.rs  ipc.rs  lib.rs  machine.rs  network.rs  progress.rs  range.rs  storage.rs  subnet.rs
sdk/src/encryption/: decryptor.rs  encryptor.rs  key.rs  metadata.rs  object.rs  sse_c.rs
sdk/src/ipc/: manager.rs  subnet.rs
sdk/src/machine/: accumulator.rs  bucket.rs  objectstore.rs  sqlite.rs  timehub.rs
sdk/tests/: README.md  integration.rs  integration_test.rs
sdk/tests/common/: mod.rs
signer/: Cargo.toml
signer/src/: key.rs  lib.rs  signer.rs  subnet.rs  void.rs  wallet.rs
tests/cli/: 00-account-deposit.sh
tests/sdk/: Cargo.toml  README.md
tests/sdk/src/: account.rs  bucket.rs  lib.rs
tests/sdk/src/common/: mod.rs
