[workspace]
members = ["cli", "provider", "sdk", "signer"]
resolver = "2"

[workspace.package]
authors = ["Recall Contributors"]
description = "Rust interfaces & tooling for Recall."
edition = "2021"
homepage = "https://github.com/recallnet/rust-recall/"
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/recallnet/rust-recall/"
keywords = ["recall", "verifiable", "agents", "ai"]
version = "0.1.2"

[workspace.dependencies]
anyhow = "1.0.82"
async-tempfile = "0.6.0"
async-trait = "0.1.80"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.22.1"
bytes = "1.6.1"
cid = { version = "0.10.1", default-features = false, features = [
    "serde-codec",
    "std",
] }
clap = { version = "4.1.14", features = [
    "color",
    "derive",
    "env",
    "string",
    "unicode",
] }
clap-stdin = { version = "0.4.0", features = ["tokio"] }
console = "0.15.8"
ethers = "2.0.14"
ethers-contract = "2.0.14"
fnv = "1.0"
humantime = "2.1.0"
hex = "0.4.3"
indicatif = "0.17.8"
infer = "0.16.0"
iroh = "0.28.1"
lazy_static = "1.4.0"
mime_guess = { version = "2.0.5" }
more-asserts = "0.3.1"
num-traits = "0.2.18"
peekable = { version = "0.2.3", features = ["tokio"] }
prost = "0.11.9"
reqwest = { version = "0.11.27", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
shellexpand = "3.0"
stderrlog = "0.6.0"
tokio = { version = "1.37.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = "0.7.1"
tokio-stream = "0.1.0"
toml = "0.8"
tracing = "0.1.40"
rand = "0.8.4"
rust_decimal = "1.36"

# Using the same tendermint-rs dependency as tower-abci. For both, we are interested in v037 modules.
tendermint = { version = "0.31.1", features = ["secp256k1"] }
tendermint-proto = "0.31.1"
tendermint-rpc = { version = "0.31.1", features = [
    "secp256k1",
    "http-client",
    "websocket-client",
] }

fvm_shared = "~4.3.0"
fvm_ipld_encoding = "~0.4.0"

recall_provider = { path = "provider", version = "0.1.2" }
recall_signer = { path = "signer", version = "0.1.2" }

recall_fendermint_actor_blobs_shared = "=0.1.2"
recall_fendermint_actor_bucket = "=0.1.2"
recall_fendermint_actor_recall_config_shared = "=0.1.2"
recall_fendermint_actor_machine = "=0.1.2"
recall_fendermint_actor_timehub = "=0.1.2"
recall_fendermint_crypto = "=0.1.2"
recall_fendermint_eth_api = "=0.1.2"
recall_fendermint_vm_actor_interface = "=0.1.2"
recall_fendermint_vm_message = "=0.1.2"
recall_ipc_actors_abis = "=0.1.2"
recall_ipc_api = "=0.1.2"

# Use below when working locally on ipc and this repo simultaneously.
# Assumes the ipc checkout is in a sibling directory with the same name.
#[patch."https://github.com/recallnet/ipc.git"]
#recall_fendermint_actor_blobs_shared = { path = "../ipc/fendermint/actors/blobs/shared" }
#recall_fendermint_actor_bucket = { path = "../ipc/fendermint/actors/bucket" }
#recall_fendermint_actor_recall_config_shared = { path = "../ipc/fendermint/actors/recall_config/shared" }
#recall_fendermint_actor_machine = { path = "../ipc/fendermint/actors/machine" }
#recall_fendermint_actor_timehub = { path = "../ipc/fendermint/actors/timehub" }
#recall_fendermint_crypto = { path = "../ipc/fendermint/crypto" }
#recall_fendermint_vm_actor_interface = { path = "../ipc/fendermint/vm/actor_interface" }
#recall_fendermint_vm_message = { path = "../ipc/fendermint/vm/message" }
#
#recall_ipc_actors_abis = { path = "../ipc/contracts/binding" }
#recall_ipc_api = { path = "../ipc/ipc/api" }
