[package]
name = "hoku_cli"
description = "A command line interface (CLI) for Hoku."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[[bin]]
name = "hoku"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
clap-stdin = { workspace = true }
ethers = { workspace = true }
ethers-contract = { workspace = true }
fvm_shared = { workspace = true }
hex = { workspace = true }
ipc-api = { workspace = true }
ipc-provider = { workspace = true }
ipc_actors_abis = { workspace = true }
iroh = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
stderrlog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

hoku_provider = { path = "../provider" }
hoku_sdk = { path = "../sdk" }
hoku_signer = { path = "../signer" }
