[package]
name = "recall_cli"
description = "A command line interface (CLI) for Recall."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[[bin]]
name = "recall"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
clap = { workspace = true }
clap-stdin = { workspace = true }
ethers = { workspace = true }
hex = { workspace = true }
humantime = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
stderrlog = { workspace = true }
tokio = { workspace = true }

recall_provider = { path = "../provider" }
recall_sdk = { path = "../sdk" }
recall_signer = { path = "../signer" }
