[package]
name = "hoku_sdk"
description = "The top-level user interface for managing Hoku object storage and timehubs."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
autoexamples = true

[dependencies]
anyhow = { workspace = true }
async-tempfile = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
console = { workspace = true }
ethers = { workspace = true }
ethers-contract = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
iroh = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }
peekable = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tendermint = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

fendermint_actor_blobs_shared = { workspace = true }
fendermint_actor_bucket = { workspace = true }
fendermint_actor_hoku_config_shared = { workspace = true }
fendermint_actor_machine = { workspace = true }
fendermint_actor_timehub = { workspace = true }
fendermint_vm_actor_interface = { workspace = true }

ipc_actors_abis = { workspace = true }
ipc-api = { workspace = true }

hoku_provider = { path = "../provider" }
hoku_signer = { path = "../signer" }

[dev-dependencies]
hex = { workspace = true }
