[package]
name = "recall_sdk"
description = "The top-level user interface for managing Recall object storage and timehubs."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true
autoexamples = true

[dependencies]
anyhow = { workspace = true }
async-tempfile = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cid = { workspace = true }
console = { workspace = true }
ethers = { workspace = true }
ethers-contract = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
iroh = { workspace = true }
lazy_static = { workspace = true }
mime_guess = { workspace = true }
num-traits = { workspace = true }
peekable = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tendermint = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

recall_fendermint_actor_blobs_shared = { workspace = true }
recall_fendermint_actor_bucket = { workspace = true }
recall_fendermint_actor_recall_config_shared = { workspace = true }
recall_fendermint_actor_machine = { workspace = true }
recall_fendermint_actor_timehub = { workspace = true }
recall_fendermint_vm_actor_interface = { workspace = true }

recall_ipc_actors_abis = { workspace = true }
recall_ipc_api = { workspace = true }

recall_provider = { workspace = true }
recall_signer = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
more-asserts = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }
