[package]
name = "recall_signer"
description = "A transaction signer for Recall."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
fnv = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tendermint-rpc = { workspace = true }

recall_fendermint_crypto = { workspace = true }
recall_fendermint_vm_actor_interface = { workspace = true }
recall_ipc_api = { workspace = true }
recall_provider = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
