[package]
name = "recall_sdk_tests"
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
version.workspace = true

[lib]
name = "recall_sdk_tests"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-tempfile = { workspace = true }
hex = { workspace = true }
more-asserts = { workspace = true }
rand = { workspace = true }
shellexpand = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }

fendermint_actor_blobs_shared = { workspace = true }
fendermint_actor_bucket = { workspace = true }
fendermint_actor_recall_config_shared = { workspace = true }
fendermint_actor_machine = { workspace = true }
fendermint_actor_timehub = { workspace = true }
fendermint_vm_actor_interface = { workspace = true }

recall_provider = { path = "../../provider" }
recall_sdk = { path = "../../sdk" }
recall_signer = { path = "../../signer" }
